@@ -1,3 +1,7 @@
+2012-01-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-remote-path): Set tramp-autoload cookie.
+
 2012-01-01  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-remote-path): Add "/opt/bin" and "/opt/sbin".
